--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f0f0f0;
 }
-
+body{
+  padding:0;
+  margin:0;
+}
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
