--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,7 +7,7 @@
   
   .about {
     width: 100%;
-    height: calc(100vh - 100px);
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,4 +78,7 @@
       font-size: 30px;
     }
   }
-  
+  .profile{
+    width: 700px;
+    border-radius: 33px;
+  }
