--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,9 @@
     margin: 20px;
     font-size: 25px;
   }
-  
+  .heading{
+    color: white;
+  }
   .toggleButton {
     width: 100%;
     height: 100px;
