--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -79,6 +79,10 @@
     }
   }
   .profile{
-    width: 700px;
-    border-radius: 33px;
+    height:50%;
+    width: 60%;
+    vertical-align: middle;
+    border-radius: 50%;
+    display: inline-block;
+    object-fit: cover;
   }
